api/tests/integration/snapshots/r#mod__integration__sources_test__all_sources_can_be_read-2.snap
---
source: api/tests/integration/sources_test.rs
expression: source.config
---
SourceConfig {
    host: "example.com",
    port: 2345,
    name: "sergtsop",
    username: "sergtsop",
    password: Some(
        Secret([REDACTED alloc::string::String]),
    ),
}
