api/tests/integration/snapshots/r#mod__integration__sources_test__all_sources_can_be_read.snap
---
source: api/tests/integration/sources_test.rs
expression: source.config
---
SourceConfig {
    host: "localhost",
    port: 5432,
    name: "postgres",
    username: "postgres",
    password: Some(
        Secret([REDACTED alloc::string::String]),
    ),
}
