api/tests/integration/snapshots/r#mod__integration__sources_test__an_existing_source_can_be_updated.snap
---
source: api/tests/integration/sources_test.rs
expression: response.config
---
StrippedSourceConfig {
    host: "example.com",
    port: 2345,
    name: "sergtsop",
    username: "sergtsop",
}
